--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -94,6 +94,7 @@ The output of our research and projects has been presented and published in many
 ### [C] Conference Proceedings
 <ol reversed>
 
+<li>Utama, D.N., Asrol, M., Suharjito; Harito, C., Napthaleni; <b>Syafrudin, M.</b> (2024)  An Object Driven Fuzzy Decision Model for Sugarcane Yield Prediction in Indonesia’s Sugar Industry. In Proceedings of the 2024 7th International Seminar on Research of Information Technology and Intelligent Systems (ISRITI); IEEE: Yogyakarta, Indonesia, December 11 2024; pp. 684–688. DOI: 10.1109/ISRITI64779.2024.10963384 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ISRITI64779.2024.10963384'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:B3FOqHPlNUQC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
@@ -123,6 +124,7 @@ The output of our research and projects has been presented and published in many
 ### [B] Books / Chapters
 <ol reversed>
 
+<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Achieving Sustainability in Multi-Industry Settings With AI, IGI Global: Hershey, PA, 2025; ISBN 9798337325309, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3373-2530-9'>[Link]</a></li>
 <li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Artificial Intelligence and Data Science for Sustainability: Applications and Methods, IGI Global: Hershey, PA, 2025; ISBN 9798369368299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-6829-9'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Research Anthology on Business Law, Policy, and Social Responsibility, Management Association, I.R., Ed., IGI Global, 2023, pp. 565–573 ISBN 9798369320457, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-2045-7.ch030'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research, Anshari, M., Syafrudin, M., Alfian, G., Eds., IGI Global, 2023, pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
