New books published
- https://books.google.co.kr/books?id=C7xGEQAAQBAJ
- https://books.google.co.kr/books?id=IrBTEQAAQBAJ

--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -6,29 +6,49 @@ title: Books
 
 ### <highlight  color="#04be58">Current Book Project</highlight>
 
+<i>TBU.</i>
+
+
+### <highlight  color="#0184c6">Published Books</highlight>
+
 <div class="row">
-<div class="col col--2"><img src="/updates/comingsoon.png"/></div>
+<div class="col col--2"><img src="/updates/9798369368299.webp"/></div>
 <div class="col col--10">
 <h3>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</h3>
 <i>By Muhammad Syafrudin, Norma Latif Fitriyani, Muhammad Anshari</i>
-<br/>(Expected) Release Date: February, 2025 | (Expected) Pages: 300 | DOI: 10.4018/979-8-3693-6829-9
-<br/>
+<br/>Release Date: February, 2025 | Pages: 498 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.4018/979-8-3693-6829-9'>10.4018/979-8-3693-6829-9</a><br/>
 <h3>Description:</h3>
-The proposed publication, titled "<b>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</b>," aims to explore the applications of artificial intelligence (AI) techniques and methodologies in addressing various sustainability challenges. The book will bring together cutting-edge research, case studies, and practical applications that demonstrate how AI can be leveraged to promote sustainable development across diverse domains, such as energy, transportation, agriculture, waste management, urban planning, and environmental protection. The publication will delve into the intersection of AI and sustainability, showcasing how AI technologies, including machine learning, deep learning, computer vision, natural language processing, and optimization algorithms, can be harnessed to develop innovative solutions for environmental, economic, business, and social sustainability challenges.
+The integration of artificial intelligence (AI) and data science (DS) into sustainability efforts is increasingly crucial as the world faces environmental and resource challenges. By leveraging advanced AI and DS techniques, we can create innovative solutions for sectors like energy, agriculture, and waste management, promoting long-term sustainability. These technologies have the potential to optimize processes, reduce environmental footprints, and support smarter decision-making across industries. Ultimately, AI and DS are key to advancing both the efficiency and impact of sustainability efforts, contributing to a more sustainable future for society at large.
 <br/><br/>
-This publication will have a significant impact on the research community by bringing together researchers and practitioners from various fields, including business & economics, management, computer science, environmental science, engineering, urban planning, and sustainable development, the book will promote cross-pollination of ideas and facilitate interdisciplinary collaborations.
-<br/><br/>
-The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.<br/><br/>
+<b>
+Artificial Intelligence and Data Science for Sustainability: Applications and Methods</b> explores the application of AI and DS techniques and methodologies in addressing various sustainability challenges. It brings together cutting-edge research, case studies, and practical applications that demonstrate how AI can be leveraged to promote sustainable development across diverse domains. Covering topics such as structural optimization, drone imagery, and development financing, this book is an excellent resource for computer scientists, computer engineers, urban planners, sustainability professionals, government officials, policymakers, researchers, professionals, scholars, academicians, and more.
 <br/>
-
-<h3>Get the Book from (TBU):</h3>
+<h3>Get the Book from:</h3>
 <ul>
 <li><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/book/artificial-intelligence-data-science-sustainability/345966'>IGI Global</a></li>
+<li><a target='_blank' alt='link' rel='noopener noreferrer' href='https://books.google.co.kr/books?id=C7xGEQAAQBAJ'>Google Books</a></li>
 </ul>
 </div>
 </div>
 
-### <highlight  color="#0184c6">Published Books</highlight>
+<div class="row">
+<div class="col col--2"><img src="/updates/9798337325309.webp"/></div>
+<div class="col col--10">
+<h3>Achieving Sustainability in Multi-Industry Settings With AI</h3>
+<i>By Muhammad Syafrudin, Norma Latif Fitriyani, Muhammad Anshari</i>
+<br/>Release Date: April, 2025 | Pages: 552 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.4018/979-8-3373-2530-9'>10.4018/979-8-3373-2530-9</a><br/>
+<h3>Description:</h3>
+Harnessing artificial intelligence (AI) for sustainability offers transformative opportunities to address critical environmental, economic, and social challenges. By fostering interdisciplinary collaboration across fields like computer science, environmental science, and urban planning, AI enables innovative solutions that drive progress in areas such as energy efficiency, sustainable agriculture, and urban development. This cross-pollination of ideas not only accelerates advancements but also ensures a holistic approach to tackling complex global issues. Leveraging AI in these domains has the potential to create a more sustainable and equitable future for society.
+<br/><br/>
+<b>Achieving Sustainability in Multi-Industry Settings With AI</b> explores how AI can be applied across diverse industries to drive sustainable solutions and address environmental, economic, and social challenges. By showcasing innovative applications, case studies, and strategies, it highlights the transformative potential of AI in promoting sustainability across sectors. Covering topics such as consumer protection, energy distribution, and smart cities, this book is an excellent resource for computer scientists, computer engineers, urban planners, sustainability professionals, government officials, policymakers, researchers, professionals, scholars, academicians, and more.
+
+<h3>Get the Book from:</h3>
+<ul>
+<li><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/book/achieving-sustainability-multi-industry-settings/368650'>IGI Global</a></li>
+<li><a target='_blank' alt='link' rel='noopener noreferrer' href='https://books.google.co.kr/books?id=IrBTEQAAQBAJ'>Google Books</a></li>
+</ul>
+</div>
+</div>
 
 <div class="row">
 <div class="col col--2"><img src="/updates/metaverse-book.jpg"/></div>
