--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,6 +15,7 @@ The output of our research and projects has been presented and published in many
 ### [J] Journal Articles
 <ol reversed>
 
+<li>1.  Naseer, A., Raza, A., Afzal, H., Smerat, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> Human Pose Estimation in Physiotherapy Fitness Exercise Correction Using Novel Transfer Learning Approach. PeerJ Computer Science 2025, 11, e2854, doi:10.7717/peerj-cs.2854. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2854'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:geHnlv5EZngC'>[GoogleScholar]</a></li>
 <li>Chainando, N., Martawidjaja, M., Darius, R. A., Yahya, L. C., Yemima, S., Tan, W. S., Harito, C., Chandra, R. C., Andhini, G. K., Putra, K. B., Lumban Tobing, C. C., Syafi’i, M., & <b>Syafrudin, M.</b> (2025). Applying 3D Scanning and Printing Techniques to Produce Upper Limb Prostheses: Bibliometric Analysis and Scoping Review. Prosthesis, 7(2), 26. https://doi.org/10.3390/prosthesis7020026 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis7020026'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:4fKUyHm3Qg0C'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Malik, D.S., Keshta, I., Fitriyani, N.L., Gu, Y. and <b>Syafrudin, M.*</b> (2025) Multi-Stage Neural Network-based Ensemble Learning Approach for Wheat Leaf Disease Classification. IEEE Access 2025, 13, 30101–30116, doi:10.1109/ACCESS.2025.3541347 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3541347'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:vRqMK49ujn8C'>[GoogleScholar]</a></li>
 <li>Toor, M.S., Shahbaz, H., Yasin, M., Ali, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M.*</b> (2025) An Optimized Weighted-Voting-Based Ensemble Learning Approach for Fake News Classification. Mathematics, 13, 449. https://doi.org/10.3390/math13030449 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13030449'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:tOudhMTPpwUC'>[GoogleScholar]</a></li>
@@ -94,7 +95,7 @@ The output of our research and projects has been presented and published in many
 ### [C] Conference Proceedings
 <ol reversed>
 
-<li>Utama, D.N., Asrol, M., Suharjito; Harito, C., Napthaleni; <b>Syafrudin, M.</b> (2024)  An Object Driven Fuzzy Decision Model for Sugarcane Yield Prediction in Indonesia’s Sugar Industry. In Proceedings of the 2024 7th International Seminar on Research of Information Technology and Intelligent Systems (ISRITI); IEEE: Yogyakarta, Indonesia, December 11 2024; pp. 684–688. DOI: 10.1109/ISRITI64779.2024.10963384 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ISRITI64779.2024.10963384'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:B3FOqHPlNUQC'>[GoogleScholar]</a></li>
+<li>Utama, D.N., Asrol, M., Suharjito, Harito, C., Napthaleni, <b>Syafrudin, M.</b> (2024)  An Object Driven Fuzzy Decision Model for Sugarcane Yield Prediction in Indonesia’s Sugar Industry. In Proceedings of the 2024 7th International Seminar on Research of Information Technology and Intelligent Systems (ISRITI), IEEE: Yogyakarta, Indonesia, December 11 2024, pp. 684–688. DOI: 10.1109/ISRITI64779.2024.10963384 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ISRITI64779.2024.10963384'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:B3FOqHPlNUQC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
@@ -124,8 +125,8 @@ The output of our research and projects has been presented and published in many
 ### [B] Books / Chapters
 <ol reversed>
 
-<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Achieving Sustainability in Multi-Industry Settings With AI, IGI Global: Hershey, PA, 2025; ISBN 9798337325309, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3373-2530-9'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Artificial Intelligence and Data Science for Sustainability: Applications and Methods, IGI Global: Hershey, PA, 2025; ISBN 9798369368299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-6829-9'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Achieving Sustainability in Multi-Industry Settings With AI, IGI Global: Hershey, PA, 2025, ISBN 9798337325309, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3373-2530-9'>[Link]</a></li>
+<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Artificial Intelligence and Data Science for Sustainability: Applications and Methods, IGI Global: Hershey, PA, 2025, ISBN 9798369368299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-6829-9'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Research Anthology on Business Law, Policy, and Social Responsibility, Management Association, I.R., Ed., IGI Global, 2023, pp. 565–573 ISBN 9798369320457, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-2045-7.ch030'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research, Anshari, M., Syafrudin, M., Alfian, G., Eds., IGI Global, 2023, pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
 <li>Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds., Metaverse Applications for New Business Models and Disruptive Innovation, IGI Global, 2023, ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
