--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,8 +15,8 @@ The output of our research and projects has been presented and published in many
 ### [J] Journal Articles
 <ol reversed>
 
-<li>1.  Naseer, A., Raza, A., Afzal, H., Smerat, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> Human Pose Estimation in Physiotherapy Fitness Exercise Correction Using Novel Transfer Learning Approach. PeerJ Computer Science 2025, 11, e2854, doi:10.7717/peerj-cs.2854. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2854'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:geHnlv5EZngC'>[GoogleScholar]</a></li>
-<li>Chainando, N., Martawidjaja, M., Darius, R. A., Yahya, L. C., Yemima, S., Tan, W. S., Harito, C., Chandra, R. C., Andhini, G. K., Putra, K. B., Lumban Tobing, C. C., Syafi’i, M., & <b>Syafrudin, M.</b> (2025). Applying 3D Scanning and Printing Techniques to Produce Upper Limb Prostheses: Bibliometric Analysis and Scoping Review. Prosthesis, 7(2), 26. https://doi.org/10.3390/prosthesis7020026 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis7020026'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:4fKUyHm3Qg0C'>[GoogleScholar]</a></li>
+<li>1.  Naseer, A., Raza, A., Afzal, H., Smerat, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Human Pose Estimation in Physiotherapy Fitness Exercise Correction Using Novel Transfer Learning Approach. PeerJ Computer Science 2025, 11, e2854, doi:10.7717/peerj-cs.2854. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2854'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:geHnlv5EZngC'>[GoogleScholar]</a></li>
+<li>Chainando, N., Martawidjaja, M., Darius, R. A., Yahya, L. C., Yemima, S., Tan, W. S., Harito, C., Chandra, R. C., Andhini, G. K., Putra, K. B., Lumban Tobing, C. C., Syafi’i, M., & <b>Syafrudin, M.</b> (2025) Applying 3D Scanning and Printing Techniques to Produce Upper Limb Prostheses: Bibliometric Analysis and Scoping Review. Prosthesis, 7(2), 26. https://doi.org/10.3390/prosthesis7020026 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis7020026'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:4fKUyHm3Qg0C'>[GoogleScholar]</a></li>
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Malik, D.S., Keshta, I., Fitriyani, N.L., Gu, Y. and <b>Syafrudin, M.*</b> (2025) Multi-Stage Neural Network-based Ensemble Learning Approach for Wheat Leaf Disease Classification. IEEE Access 2025, 13, 30101–30116, doi:10.1109/ACCESS.2025.3541347 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2025.3541347'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:vRqMK49ujn8C'>[GoogleScholar]</a></li>
 <li>Toor, M.S., Shahbaz, H., Yasin, M., Ali, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M.*</b> (2025) An Optimized Weighted-Voting-Based Ensemble Learning Approach for Fake News Classification. Mathematics, 13, 449. https://doi.org/10.3390/math13030449 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math13030449'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:tOudhMTPpwUC'>[GoogleScholar]</a></li>
 <li>Butt, N., Iqbal, M.M., Ramzan, S., Raza, A., Abualigah, L., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2025) Citrus Diseases Detection Using Innovative Deep Learning Approach and Hybrid Meta-Heuristic. PLoS ONE, 20, e0316081, doi:10.1371/journal.pone.0316081.
