--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -1,8 +1,12 @@
-import Journals from './pubs/journals.mdx'
-
 ---
 title: Publications
 ---
+
+import Journals from './pubs/journals.mdx'
+import Conferences from './pubs/conferences.mdx'
+import Books from './pubs/books.mdx'
+
+
 
 # Publications
 
@@ -15,49 +19,16 @@ The output of our research and projects has been presented and published in many
 :::
 
 
+### [J] Journal Articles
 <Journals />
 
 
 ### [C] Conference Proceedings
-<ol reversed>
-
-<li>Utama, D.N., Asrol, M., Suharjito, Harito, C., Napthaleni, <b>Syafrudin, M.</b> (2024)  An Object Driven Fuzzy Decision Model for Sugarcane Yield Prediction in Indonesia’s Sugar Industry. In Proceedings of the 2024 7th International Seminar on Research of Information Technology and Intelligent Systems (ISRITI), IEEE: Yogyakarta, Indonesia, December 11 2024, pp. 684–688. DOI: 10.1109/ISRITI64779.2024.10963384 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ISRITI64779.2024.10963384'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:B3FOqHPlNUQC'>[GoogleScholar]</a></li>
-<li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
-<li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
-<li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
-<li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6., DOI:10.1109/3ICT60104.2023.10391550 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
-<li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICITACEE58587.2023.10277046'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICITACEE58587.2023.10277046'>[GoogleScholar]</a></li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT56508.2022.9990708'>[GoogleScholar]</a></li>
-<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICETSIS55481.2022.9888806'>[GoogleScholar]</a></li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICETSIS55481.2022.9888838'>[GoogleScholar]</a></li>
-<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, & Alfian, G. Improving Accuracy of Machine Learning-Based Prediction Model for Heart Disease Classification Using Information Gain and DBSCAN. In KMIS International Conference (pp. 506-509).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416370'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Fitriyani, N. L., & Alfian, G. Forecasting Blood Glucose Using Extreme Gradient Boosting Regression Model. In KMIS International Conference (pp. 501-505).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416369'>[Link]</a></li>
-<li>Fitriyani, N.L., <b>Syafrudin, M.</b>, Alfian, G., Fatwanto, A., Qolbiyani, S.L., Rhee, J. Prediction Model for Type 2 Diabetes Using Stacked Ensemble Classifiers. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 399–402.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317090'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Sidiq, A.H., Tjahjanto, T., Rhee, J. Improving Efficiency of Self-Care Classification Using PCA and Decision Tree Algorithm. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 224–227.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317243'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.</b>, Fitriyani, N.L., Rhee, J., Ma’arif, M.R., Riadi, I. Traceability System Using IoT and Forecasting Model for Food Supply Chain. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 903–907.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317011'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Anshari, M., Mustakim, M., Fahrurrozi, I. Blood Glucose Prediction Model for Type 1 Diabetes based on Extreme Gradient Boosting. <i>IOP Conference Series: Materials Science and Engineering 2020</i>, 803, 012012. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012012'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.</b>, Rhee, J., Stasa, P., Mulyanto, A., Fatwanto, A. In-store Customer Shopping Behavior Analysis by Utilizing RFID-enabled Shelf and Multilayer Perceptron Model. <i>IOP Conference Series: Materials Science and Engineering 2020</i>, 803, 012022. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1088/1757-899x/803/1/012022'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. Detecting Movement and Direction of Tags for RFID Gate. <i>2019 5th International Conference on Science and Technology (ICST)</i>. July 30–31. Yogyakarta, Indonesia <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICST47872.2019.9166196'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Lee, K., Alfian, G., Jaeho, L., Rhee, J. Application of Bluetooth Low Energy-Based Real-Time Location System for Indoor Environments. <i>2018 2nd International Conference on Big Data and Internet of Things</i>. October 24 - 26. Beijing, China: ACM Digital Library. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1145/3289430.3289470'>[Link]</a></li>
-<li>Alfian, G., Ijaz, M.F., <b>Syafrudin, M.</b>, Jaeho, L., Rhee, J. A Low Cost IoT-based Traceability System for Perishable Food Supply Chain. <i>The 2018 World Congress on Information Technology Applications and Services</i>. February 20-22. Jeju, Korea: KIPS.</li>
-<li><b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Real time monitoring system based on IoT sensor data for assembly line process in the automotive factory. <i>Korean Society of Manufacturing Technology Engineers Annual Autumn Conference 2017</i>. December 6-8. Jeju, Korea: KSMTE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07285510'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Lee, K., Fitriyani, N.L., Alfian, G., Rhee, J. Development of Real-time Prediction System Based on Random Forest Algorithm in Smart Factory. <i>Korea Business Intelligence Data Mining Society Fall Conference 2017</i>. November 24-25. Busan, Korea: KDMS. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://kdms.or.kr/board/read.asp?table=notice&m_no=253'>[Link]</a></li>
-<li>Kang, Y.-S, <b>Syafrudin, M.</b>, Fitriyani, N.L., Won, J., Lee, Y.-H., Rhee, J. Development of Distributed Processing System for Real-time Sensor Data : Injection Molding Process. <i>Proceedings of Korean Society for Precision Engineering 2017 Spring Conference</i>. May 17-19. Jeju, Korea: KSPE, 574-574. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://www.dbpia.co.kr/Journal/ArticleDetail/NODE07205708'>[Link]</a></li>
-<li>Fitriyani, N.L., Yang, C-K., <b>Syafrudin, M.</b> Real-time eye state detection system using haar cascade classifier and circular hough transform. <i>2016 IEEE 5th Global Conference on Consumer Electronics</i>. October 11-14. Kyoto, Japan: IEEE. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://ieeexplore.ieee.org/document/7800424/'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Lee, Y.-H. A Quality Prediction as a Service for Manufacturing Small and Medium-sized Enterprises (SMEs). <i>International Symposium on Green Manufacturing and Applications 2016</i>. June 21-25. Bali, Indonesia: KSPE and ISGMA. <a target='_blank' alt='link' rel='noopener noreferrer' href='http://2016.isgma.org/data/2016/04-ISGMA2016_pdf.zip'>[Link]</a></li>
-</ol>
+<Conferences />
 
 
 ### [B] Books / Chapters
-<ol reversed>
-
-<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Achieving Sustainability in Multi-Industry Settings With AI, IGI Global: Hershey, PA, 2025, ISBN 9798337325309, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3373-2530-9'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Fitriyani, N.L., Anshari, M., Eds., Artificial Intelligence and Data Science for Sustainability: Applications and Methods, IGI Global: Hershey, PA, 2025, ISBN 9798369368299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-6829-9'>[Link]</a></li>
-<li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Research Anthology on Business Law, Policy, and Social Responsibility, Management Association, I.R., Ed., IGI Global, 2023, pp. 565–573 ISBN 9798369320457, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/979-8-3693-2045-7.ch030'>[Link]</a></li>
-<li>Anshari, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., Al-Mudimigh, A. Ethical Concerns in the Metaverse Business: In Advances in E-Business Research, Anshari, M., Syafrudin, M., Alfian, G., Eds., IGI Global, 2023, pp. 35–47 ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.4018/978-1-6684-6097-9.ch003'>[Link]</a></li>
-<li>Anshari, M., <b>Syafrudin, M.</b>, Alfian, G., Eds., Metaverse Applications for New Business Models and Disruptive Innovation, IGI Global, 2023, ISBN 978-1-66846-097-9, <a target='_blank' alt='link' rel='noopener noreferrer' href='http://dx.doi.org/10.4018/978-1-6684-6097-9'>[Link]</a></li>
-<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Syaekhoni, M.A., Rhee, J. Utilizing IoT-Based Sensors and Prediction Model for Health-Care Monitoring System. <i>In Artificial Intelligence and Big Data Analytics for Smart Healthcare</i>, Elsevier, 2021, pp. 63–80 ISBN 978-0-12-822060-3. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/B978-0-12-822060-3.00009-7'>[Link]</a></li>
-</ol>
+<Books />
 
 
 :::note
