--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -85,16 +85,5 @@ Research interest: Machine learning, cyber security
 :::
 
 
-### <highlight  color="#980606">Research Collaborator</highlight>
-
-<i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
-<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank">
-<img src="/team/collaboration_map.png"/>
-</a><br/>
-<br/>
-
-:::tip Call for Collaboration
-
-*We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
-*If you are interested in collaborating with us, please send an email to the director.*
-:::
+import Colabs from './colabs.mdx'
+<Colabs />
