--- a/src/pages/alumni.mdx
+++ b/src/pages/alumni.mdx
@@ -2,6 +2,8 @@
 title: Alumni
 ---
 
+import Colabs from './colabs.mdx'
+
 # Alumni
 
 :::info Acknowledgment
@@ -46,5 +48,5 @@ title: Alumni
 
 <br/>
 
-import Colabs from './colabs.mdx'
+### <highlight  color="#980606">Collaborator Network Map</highlight>
 <Colabs />
