--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -2,6 +2,8 @@
 title: Team
 ---
 
+import Colabs from './colabs.mdx'
+
 # Team
 
 ### <highlight  color="#04be58">Director</highlight>
@@ -84,6 +86,5 @@ Research interest: Machine learning, cyber security
 *AINTLab's success is due to the critical support of individuals who contributed to innovative research and shared their expertise. Please find them <a target='_blank' alt='alumni page' rel='noopener noreferrer' href='https://aintlab.com/alumni'>here.</a>*
 :::
 
-
-import Colabs from './colabs.mdx'
+### <highlight  color="#980606">Collaborator Network Map</highlight>
 <Colabs />
