--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -28,9 +28,12 @@ import Projects from './project_list.mdx'
 
 
 ## Research
+### Research Interests
+- Industrial Artificial Intelligence (IAI), Industrial Analytics
+- Data Intelligence, Industrial Informatics
+- Industrial IoT, Industrial Big Data
 
-
-### Research Projects:
+### Research Projects
 <Projects />
 
 ## Journal Editorship and Reviewing
