--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -43,9 +43,16 @@ import Projects from './project_list.mdx'
 
 
 ## Publication Summary
+| Indexing Database | Total Publication | Total Citations | Total H-Index |
+| ------------- | ------------- | ------------- | ------------- |
+| Web of Science | 69 | 1,880 | 21 |
+| Scopus | 87 | 2,906 | 22 |
+| Google Scholar | 102 | 4,104 | 28 |
 
-
-## Publication Summary
+- Web of Science	: https://www.webofscience.com/wos/author/record/P-9657-2017 
+- Scopus		: https://www.scopus.com/authid/detail.uri?authorId=57197741727 
+- Google Scholar	: https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ 
+- ORCID		: https://orcid.org/0000-0002-5640-4413  
 
 
 ## List of Publications
