--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -37,9 +37,35 @@ import Projects from './project_list.mdx'
 <Projects />
 
 ## Journal Editorship and Reviewing
+- Lead Guest Editor, Mathematics [Special Issue:  “Application of Artificial Intelligence in Decision Making", Deadline for manuscript submissions: 31 May 2025]
+- Lead Guest Editor, Sustainability [Special Issue:  “Applied Artificial Intelligence for Sustainability", Deadline for manuscript submissions: 31 May 2023]
+- Lead Guest Editor, Big Data and Cognitive Computing [Special Issue: “Applied Artificial Intelligence for Sustainability”, Deadline for manuscript submissions: 31 May 2023]
+- Lead Guest Editor, Computers [Special Issue: “Applied ML for Industrial IoT”, Deadline for manuscript submissions: 01 September 2023]
+- Topical Advisory Panel Member, Mathematics (2023 – present)
+- Topical Advisory Panel Member, Big Data and Cognitive Computing (2023 – present)
+- Editorial Board, ComTech (2020 – present)
+- Topical Advisory Panel Member, Sustainability (2020 – present)
+- Lead Guest Editor, Sustainability [Special Issue: "AI for Sustainable Services and Applications"]
+- Review Editor, IoT and Sensor Networks (2020 – present)
+- Reviewer Board, Sensors (2020 – present)
+- Reviewer Board, Algorithms (2020 – present)
+- Reviewer Board, Information (2020 – present)
+- Reviewer Board, Computers (2020 – present)
+- Reviewer, Expert Systems With Application
+- Reviewer, IEEE Transactions on Industrial Informatics
+- Reviewer, IEEE Internet of Things Journal
+- Reviewer, IEEE Access
+- Reviewer, Sensors
+- Reviewer, Algorithms
+- Reviewer, Mathematics
+- Etc.
+
+For a comprehensive list of my journal editorships and reviewer roles, please refer to my <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> page.
 
 
 ## Intellectual Property Rights
+- Korean Patent, Application No. 10-2018-0138782, 헬스케어 모니터링 시스템 - HEALTHCARE MONITORING SYSTEM (Filling date 13 November 2018)
+- Korean Patent, Application No. 10-2017-0148166, 버스 탑승객에게 혜택을 제공하는 방법 및 시스템 - Method and System for Providing Benefit to Bus Passenger (Filling date 11 November 2017)
 
 
 ## Publication Summary
@@ -57,7 +83,7 @@ import Projects from './project_list.mdx'
 
 ## List of Publications
 :::info
-<i>J = journal, C = conference, B = book/chapter, + = co-first author, and * = corresponding author. For a comprehensive and up-to-date list of my publications, please refer to my ><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://orcid.org/0000-0002-5640-4413'>[ORCID]</a>.</i>
+<i>J = journal, C = conference, B = book/chapter, + = co-first author, and * = corresponding author. For a comprehensive and up-to-date list of my publications, please refer to my <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://orcid.org/0000-0002-5640-4413'>[ORCID]</a>.</i>
 :::
 
 ### [J] Journal Articles
