--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -7,12 +7,30 @@ import Conferences from './pubs/conferences.mdx'
 import Books from './pubs/books.mdx'
 import Projects from './project_list.mdx'
 
+
+
 # CURRICULUM VITAE
 
 ## Personal Information
+| ------------- | ------------- |
+|Name	|  Muhammad Syafrudin
+|Email	|  udin[at]sejong.ac.kr / udin[at]aintlab.com |
+|Phone	|  +82-2-3408-1879 |
+|Office address	|  No. 502, Daeyang AI Center, Sejong University, 209 Neungdong-ro, Gwangjin-gu, Seoul 05006, Republic of Korea |
+|Personal page | https://muhammadsyafrudin.com |
+| Faculty page | https://home.sejong.ac.kr/~udin/ | 
+| Research profile | https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin   |
+| LinkedIn | https://linkedin.com/in/justudin |
+| MathGenealogy | https://mathgenealogy.org/id.php?id=297235 |
+| AINTLab site | https://s.aintlab.com/1 | 
 
 
 ## Educations
+| ------------- | ------------- |
+| 2014 – 2019	| Dongguk University, Seoul, Korea |
+| | Dr. Eng (Doctor of Engineering), Dept. of Industrial and Systems Engineering |
+| 2009 – 2013	| Universitas Islam Negeri (UIN) Sunan Kalijaga, Yogyakarta, Indonesia |
+| | S.Kom (Sarjana Komputer, Bachelor of Computer Science), Teknik Informatika, Dept. of Informatics |
 
 
 ## Professional Experiences
@@ -68,7 +86,7 @@ For a comprehensive list of my journal editorships and reviewer roles, please re
 - Korean Patent, Application No. 10-2017-0148166, 버스 탑승객에게 혜택을 제공하는 방법 및 시스템 - Method and System for Providing Benefit to Bus Passenger (Filling date 11 November 2017)
 
 
-## Publication Summary
+## Publication Summary*
 | Indexing Database | Total Publication | Total Citations | Total H-Index |
 | ------------- | ------------- | ------------- | ------------- |
 | Web of Science | 69 | 1,880 | 21 |
@@ -79,7 +97,7 @@ For a comprehensive list of my journal editorships and reviewer roles, please re
 - Scopus		: https://www.scopus.com/authid/detail.uri?authorId=57197741727 
 - Google Scholar	: https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ 
 - ORCID		: https://orcid.org/0000-0002-5640-4413  
-
+<i>*Last updated on 2025-05-07</i>
 
 ## List of Publications
 :::info
