--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -34,6 +34,15 @@ import Projects from './project_list.mdx'
 
 
 ## Professional Experiences
+| ------------- | ------------- |
+| Mar 2024 – present	| Assistant Professor, Dept. of Artificial Intelligence and Data Science, Sejong University, Seoul, Korea |
+| Mar 2022 – Feb 2024	| Assistant Professor, Dept. of Artificial Intelligence, Sejong University, Seoul, Korea |
+| Jan 2023 – present 	| Chairman, Representative of Indonesian Association of Higher Education in Informatics and Computing (APTIKOM) in South Korea, Decree No. KEP. 03/SK/APTIKOM/I/2023 |
+| Mar 2022 – present	| Program Member, Oracle Academy, Korea  |
+| Mar 2019 – Feb 2022	| Assistant Professor, Dept. of Industrial and Systems Engineering, Dongguk University, Seoul, Korea |
+| Mar 2014 – Feb 2019	| Graduate Researcher and Teaching Assistant, Dept. of Industrial and Systems Engineering, Industrial AI Research Center, Dongguk University, Seoul, Korea |
+| Jul 2012 – Feb 2014 	| Web Developer, UIN Sunan Kalijaga, Yogyakarta, Indonesia |
+| Jan 2011 – Jan 2013	| Teaching Assistant, UIN Sunan Kalijaga, Yogyakarta, Indonesia | 
 
 
 ## Honors, Awards, and Certificates
