--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -6,7 +6,9 @@ import Journals from './pubs/journals.mdx'
 import Conferences from './pubs/conferences.mdx'
 import Books from './pubs/books.mdx'
 import Projects from './project_list.mdx'
-
+import Honors from './honors_list.mdx'
+import Teachings from './teaching_list.mdx'
+import Speakers from './speaker_visiting_list.mdx'
 
 
 # CURRICULUM VITAE
@@ -46,12 +48,15 @@ import Projects from './project_list.mdx'
 
 
 ## Honors, Awards, and Certificates
+<Honors />
 
 
 ## Teaching Experience (14+ years)
+<Teachings />
 
 
 ## Keynote/Invited Speaker, Guest/Visiting Lecturer
+<Speakers />
 
 
 ## Research
