--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -14,6 +14,7 @@ import Speakers from './speaker_visiting_list.mdx'
 # CURRICULUM VITAE
 
 ## Personal Information
+| <!-- -->    | <!-- -->    |
 | ------------- | ------------- |
 |Name	|  Muhammad Syafrudin
 |Email	|  udin[at]sejong.ac.kr / udin[at]aintlab.com |
@@ -28,6 +29,7 @@ import Speakers from './speaker_visiting_list.mdx'
 
 
 ## Educations
+| <!-- -->    | <!-- -->    |
 | ------------- | ------------- |
 | 2014 – 2019	| Dongguk University, Seoul, Korea |
 | | Dr. Eng (Doctor of Engineering), Dept. of Industrial and Systems Engineering |
@@ -36,6 +38,7 @@ import Speakers from './speaker_visiting_list.mdx'
 
 
 ## Professional Experiences
+| <!-- -->    | <!-- -->    |
 | ------------- | ------------- |
 | Mar 2024 – present	| Assistant Professor, Dept. of Artificial Intelligence and Data Science, Sejong University, Seoul, Korea |
 | Mar 2022 – Feb 2024	| Assistant Professor, Dept. of Artificial Intelligence, Sejong University, Seoul, Korea |
@@ -111,7 +114,8 @@ For a comprehensive list of my journal editorships and reviewer roles, please re
 - Scopus		: https://www.scopus.com/authid/detail.uri?authorId=57197741727 
 - Google Scholar	: https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ 
 - ORCID		: https://orcid.org/0000-0002-5640-4413  
-<i>*Last updated on 2025-05-07</i>
+
+<br/><i>*Last updated on 2025-05-07</i>
 
 ## List of Publications
 :::info
