--- a/src/pages/team_director_cv.mdx
+++ b/src/pages/team_director_cv.mdx
@@ -95,7 +95,7 @@ import Speakers from './speaker_visiting_list.mdx'
 - Reviewer, Mathematics
 - Etc.
 
-For a comprehensive list of my journal editorships and reviewer roles, please refer to my <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> page.
+<i>For a comprehensive list of my journal editorships and reviewer roles, please refer to my <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> page.</i>
 
 
 ## Intellectual Property Rights
@@ -112,9 +112,10 @@ For a comprehensive list of my journal editorships and reviewer roles, please re
 
 - Web of Science	: https://www.webofscience.com/wos/author/record/P-9657-2017 
 - Scopus		: https://www.scopus.com/authid/detail.uri?authorId=57197741727 
-- Google Scholar	: https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ 
+- Google Scholar	: https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ
 - ORCID		: https://orcid.org/0000-0002-5640-4413
-<br/><i>*Last updated on 2025-05-07</i>
+
+<i>*Last updated on 2025-05-07</i>
 
 
 ## List of Publications
